# gmail-auto-forwarding

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: conf.py  gmail_auto_forwarding.browser.rst  gmail_auto_forwarding.config_parser.rst  gmail_auto_forwarding.forwarding_manager.rst  gmail_auto_forwarding.gmail_scraper.rst  gmail_auto_forwarding.rst  gmail_auto_forwarding.utils.rst  index.rst  modules.rst
gmail_auto_forwarding/: __main__.py
gmail_auto_forwarding/browser/: chrome.py  options.py  proxies.py
gmail_auto_forwarding/config_parser/: config_parser.py  helpers.py
gmail_auto_forwarding/forwarding_enabler/: constants.py  forwarding_enabler.py
gmail_auto_forwarding/forwarding_manager/: constants.py  forwarding_manager.py  helpers.py
gmail_auto_forwarding/gmail_scraper/: constants.py  gmail_scraper.py  helpers.py
gmail_auto_forwarding/utils/: exceptions.py  logger.py  save_results.py  schemas.py
