[tool.poetry]
name = "gmail-auto-forwarding"
version = "0.1.0"
description = "A Python project that automatically enables forwarding between a main account and multiple forwarders using customizable from filters."
authors = ["dmarts05 <dmarts05@estudiantes.unileon.es>"]
readme = "README.md"
packages = [{include = "gmail_auto_forwarding"}]

[tool.poetry.scripts]
gmail_auto_forwarding = "gmail_auto_forwarding.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
sphinx = "^7.0.1"
furo = "^2023.5.20"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
